Atualização dos alunos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <tr>
     <td>Kaic</td>
     <td>Alisson</td>
-    <td></td>
-    <td></td>
+    <td>Vinicius</td>
+    <td>Kalebe</td>
 </tr>
 
 <h1>Entregar<br>Dia 27 do mês de maio de 2024</h1>
